Projet GL/Projet_GL/src/test/deca/context/invalid/increment2/bool-comp-int.res
DEBUG fr.ensimag.deca.tree.Program.verifyProgram(Program.java:48) - verify program: start
DEBUG fr.ensimag.deca.tree.Main.verifyMain(Main.java:30) - verify Main: start
